<resources>
    <string name="app_name">Trabalho_Final</string>
    <string name="Professionais_Saude">Profissionais de saúde</string>
    <string name="Paciente_Infetado">Pacientes infetados</string>
    <string name="Pacientes_N_Infetados">Pacientes não infetados</string>
    <string name="Data_Professional">Data de nascimento</string>
    <string name="Localidade_Professional">Localidade</string>
    <string name="Nome_Infetado">Nome</string>
    <string name="Telemovel_Infetado">Telemóvel</string>
    <string name="Localidade_Infetado">Localidade</string>
    <string name="Nome_N_Infetado">Nome</string>
    <string name="Data_N_Infetado">Data de nascimento</string>
    <string name="Telemovel_N_Infetado">Telemóvel</string>
    <string name="Localidade_N_Infetado">Localidade</string>
    <string name="Submeter_Professional">Submeter</string>
    <string name="Submeter_Infetado">Submeter</string>
    <string name="Submeter_N_Infetado">Submeter</string>
    <string name="Nome_Professional">Nome</string>
    <string name="Data_Infetado">Data de nascimento</string>
    <string name="ge_nero">Gênero:</string>
    <string name="g_nero1">Gênero:</string>
    <string name="g_nero2">Gênero:</string>
    <string name="Telemovel_Professional">Telemóvel</string>
    <string name="nome_obrigatorioP">Preencha o nome</string>
    <string name="datadenascimento_obrigatoriaP">Preencha data de nascimento</string>
    <string name="telemovel_obrigatorioP">Telemóvel inválido. Preencha telemóvel</string>
    <string name="localidade_obrigatoriaP">Preencha localidade</string>
    <string name="Masculino_Professional">Masculino</string>
    <string name="Feminino_Professional">Feminino</string>
    <string name="Masculino_Infetado">Masculino</string>
    <string name="Feminino_Infetado">Feminino</string>
    <string name="Masculino_N_Infetado">Masculino</string>
    <string name="Feminino_N_Infetado">Feminino</string>
    <string name="Lista_Infetados">Lista de pacientes infetados</string>
    <string name="Cancelar_Infetado">Cancelar</string>
    <string name="Editar_Infetado">Editar</string>
    <string name="Eliminar_Infetado">Eliminar</string>
    <string name="item_NomeI">Nome:</string>
    <string name="item_DatadenascimentoI">Data de nascimento:</string>
    <string name="item_TelemovelI">Telemóvel:</string>
    <string name="item_LocalidadeI">Localidade:</string>
    <string name="item_GeneroI">Gênero:</string>
    <string name="Lista_NaoInfetado">Lista de pacientes não infetados</string>
    <string name="Lista_Profissionais">Lista de profissionais de saúde</string>
    <string name="Sala_Infetado">Quarto</string>
    <string name="Sala_N_Infetado">Quarto</string>
    <string name="item_SalaI">Quarto:</string>
    <string name="quarto_obrigatorio">Preencha quarto</string>
</resources>
